--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,29 @@ body::before {
     letter-spacing: -0.01em;
 }
 
+#name {
+    font-size: 2.5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: bold;
+    background-image: url("../icons/mechanicalkeyboard.jpg");
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: nameAnimation 20s linear infinite;
+}
+
+@keyframes nameAnimation {
+    0% {
+        background-position-x: 0;
+    }
+    100% {
+        background-position-x: -500px;
+    }
+}
+
 .nav-menu {
     display: flex;
 }
