--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,20 +535,36 @@ body::before {
     align-items: center;
 }
 
-.nav-logo h2 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #3b82f6;
-    text-shadow: 0 0 10px rgba(59, 130, 246, 0.3);
-    letter-spacing: -0.01em;
+.nav-logo {
+    display: flex;
+    align-items: center;
 }
 
+
+
+
+
 #name {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #3b82f6;
-    text-shadow: 0 0 10px rgba(59, 130, 246, 0.3);
-    letter-spacing: -0.01em;
+    font-size: 2.5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: bold;
+    background-image: url("../icons/mechanicalkeyboard.jpg");
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: nameAnimation 20s linear infinite;
+}
+
+@keyframes nameAnimation {
+    0% {
+        background-position-x: 0;
+    }
+    100% {
+        background-position-x: -500px;
+    }
 }
 
 .nav-menu {
@@ -782,8 +798,8 @@ body::before {
 
 .profile-container {
     position: relative;
-    width: 400px;
-    height: 400px;
+    width: 850px;
+    height: 850px;
     animation: fadeInScale 1s ease forwards;
     transform: scale(1);
     transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
